layout/generic/nsBlockFrame.cpp
@@ -6696,6 +6696,24 @@ nsBlockFrame::BlockNeedsSpaceManager(nsIFrame* aBlock)
     (parent && !parent->IsFloatContainingBlock());
 }
  
+/* static */
+nsBlockFrame*
+nsBlockFrame::GetNearestAncestorBlock(nsIFrame* aCandidate)
+{
+  nsBlockFrame* block = nsnull;
+  while(aCandidate) {
+    aCandidate->QueryInterface(kBlockFrameCID, (void**)&block);
+    if (block) { 
+      // yay, candidate is a block!
+      return block;
+    }
+    // Not a block. Check its parent next.
+    aCandidate = aCandidate->GetParent();
+  }
+  NS_NOTREACHED("Fell off frame tree looking for ancestor block!");
+  return nsnull;
+}
+
 #ifdef IBMBIDI
 nsresult
 nsBlockFrame::ResolveBidi()
